<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TaskCompanion</string>
    <string name="activity_title_welcome">TaskCompanion</string>
    <string name="activity_title_session_complete">Session complete</string>
    <string name="activity_title_preferences">Preferences</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">It looks like this may be your first time with TaskCompanion!</string>
    <string name="welcome_message_2">Let\'s get you comfortable</string>
    <string name="continue_arrows">></string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
    <string name="dummy_content">DUMMY CONTENT</string>
    <string name="l_elapse">Elapsed</string>
    <string name="l_total_elapse">Total elapsed</string>
    <string name="l_average">Average</string>
    <string name="l_laps">Laps</string>
    <string name="l_eta">ETA</string>
    <string name="intitial_time">00:00.0</string>
    <string name="intitial_accurate_time">00:00.000</string>
    <string name="sample_lap">17</string>
    <string name="empty_lap_adapter">No laps</string>
    <string name="package_name">com.aspirephile.taskcompanion</string>
    <string name="preferences">Preferences</string>
    <string name="l_target_time_picker">Pick your ideal lap time</string>
    <string name="session_reset_title">Reset session</string>
    <string name="session_reset_message">This will clear the current lap list and reset the timers</string>
    <string name="session_reset_positive">Reset session</string>
    <string name="session_reset_negative">Cancel</string>
    <string name="session_edit_title">Edit session</string>
    <string name="session_edit_done">Done</string>
    <string name="session_edit_positive">Create session</string>
    <string name="session_edit_negative">Cancel</string>
    <string name="session_edit_target_time">Change ideal lap time</string>
    <string name="session_create_target_title">Target time</string>
    <string name="session_create_target_hint">The ideal amount of time for each lap\n(MM:SS)</string>
    <string name="session_create_positive">Done</string>
    <string name="session_create_negative">Cancel</string>
    <string name="session_create_smart_target_title">Smart target time</string>
    <string name="session_create_smart_target_description_enabled">Automatically select the target time based on your performance</string>
    <string name="session_create_smart_target_description_disabled">Do not automatically change the target time</string>
    <string name="session_create_target_lap_title">Total laps</string>
    <string name="session_create_target_lap_hint">The number of laps required to complete this session</string>
    <string name="session_create_total_time_title">Total time</string>
    <string name="session_create_total_time_hint">The total time you want to spend on this session\n(HH:MM)</string>
    <string name="session_edit_elapse_title">Set elapsed time in current lap</string>
    <string name="session_edit_elapse_message">Manually set the time spent in the current lap (Minutes:Seconds)</string>
    <string name="session_edit_total_elapse_title">Set total elapsed time</string>
    <string name="session_edit_total_elapse_message">Manually set the total time spent in the current session (Minutes:Seconds)</string>
    <string name="pref_category_sounds_title">Sounds</string>
    <string name="pref_lap_progress_sounds_switch_title">Progress sounds</string>
    <string name="pref_lap_progress_sounds_switch_summary">Conveniently update you of your lap progress without having to look at the screen</string>
    <string name="pref_data_title">Data options</string>
    <string name="pref_data_reset_stats">Reset statistics</string>
    <string name="pref_data_reset_stats_summary">This will clear all laps and your current session</string>
    <string name="pref_category_other">Other</string>
    <string name="pref_shake_to_lap_title">Shake to lap</string>
    <string name="pref_shake_to_lap_summary_on">Shaking device will lap timer</string>
    <string name="pref_shake_to_lap_summary_off">Shaking device won\'t lap timer</string>
    <string name="l_new_session">Start new session</string>
    <string name="title_session_setup">Session setup</string>
    <string name="session_setup_positive">Create</string>
    <string name="session_setup_negative">Cancel</string>

    <string-array name="session_setup_elements">
        <item>Set target laptime </item>
        <item>Set elapsed time</item>
        <item>Set current lap number</item>
    </string-array>

    <string name="target_dialog_title">Ideal lap time</string>
    <string name="target_dialog_summary">set the ideal amount of time taken per lap</string>
    <string name="target_dialog_positive">Change</string>
    <string name="target_dialog_negative">Cancel</string>
    <string name="session_complete_back_invalid_message">Please select one of the options</string>
    <string name="title_activity_session_setup">Session Setup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">@string/app_name</string>

</resources>
