<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/total_elapse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="NestedWeights" >

            <TextView
                android:id="@+id/tv_l_total_elapse"
                style="@style/TimeStyleLabel"
                android:text="@string/l_total_elapse" />

            <TextView
                android:id="@+id/tv_total_elapse"
                style="@style/TimeStyle" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp" >

            <TextView
                android:id="@+id/tv_l_average"
                style="@style/TimeStyleLabel"
                android:text="@string/l_average" />

            <TextView
                android:id="@+id/tv_average"
                style="@style/TimeStyle"
                android:text="@string/intitial_accurate_time" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            style="@style/TimeStyleLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l_eta" />

        <TextView
            android:id="@+id/tv_eta"
            style="@style/TimeStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intitial_accurate_time" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/elapse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="8dp"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/tv_l_elapse"
                style="@style/TimeStyle"
                android:text="@string/l_elapse"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_elapse"
                style="@style/TimeStyle"
                android:textSize="45sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>