<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.aspirephile.studytimer"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ScrollView
                    android:id="@+id/basic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="120dp"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="0dp"
                                android:layout_weight="1"
                                android:background="@drawable/rectangle_outline"
                                android:baselineAligned="false"
                                android:orientation="horizontal" >

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    tools:ignore="NestedWeights" >

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:layout_column="0"
                                        app:layout_gravity="left"
                                        app:layout_row="0"
                                        android:gravity="center"
                                        android:text="@string/session_create_target_lap_title"
                                        android:textAppearance="?android:attr/textAppearanceLarge" />

                                    <TextView
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:layout_column="0"
                                        app:layout_gravity="left"
                                        app:layout_row="1"
                                        android:gravity="center"
                                        android:text="@string/session_create_target_lap_hint" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:orientation="horizontal"
                                    android:padding="8dp" >

                                    <com.aspirephile.studytimer.util.kankan.widget.WheelView
                                        android:id="@+id/wv_total_lap_picker_digit100"
                                        android:layout_width="0dp"
                                        android:layout_height="fill_parent"
                                        android:layout_weight="1"
                                        app:layout_gravity="center"
                                        tools:ignore="NestedWeights" />

                                    <com.aspirephile.studytimer.util.kankan.widget.WheelView
                                        android:id="@+id/wv_total_lap_picker_digit10"
                                        android:layout_width="0dp"
                                        android:layout_height="fill_parent"
                                        android:layout_weight="1"
                                        app:layout_gravity="center" />

                                    <com.aspirephile.studytimer.util.kankan.widget.WheelView
                                        android:id="@+id/wv_total_lap_picker_digit1"
                                        android:layout_width="0dp"
                                        android:layout_height="fill_parent"
                                        android:layout_weight="1"
                                        app:layout_gravity="center" />
                                </LinearLayout>
                            </LinearLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="140dp"
                            android:background="@drawable/rectangle_outline"
                            android:orientation="horizontal" >

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                tools:ignore="NestedWeights" >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    app:layout_column="0"
                                    app:layout_gravity="left"
                                    app:layout_row="0"
                                    android:text="@string/session_create_total_time_title"
                                    android:textAppearance="?android:attr/textAppearanceLarge" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    app:layout_column="0"
                                    app:layout_gravity="left"
                                    app:layout_row="1"
                                    android:gravity="center"
                                    android:text="@string/session_create_total_time_hint" />
                            </LinearLayout>

                            <TimePicker
                                android:id="@+id/tp_total_time"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                app:layout_column="1"
                                app:layout_gravity="fill_horizontal"
                                app:layout_row="0" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:background="@drawable/rectangle_outline"
                            android:orientation="vertical" >

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    tools:ignore="NestedWeights" >

                                    <TextView
                                        android:id="@+id/tv_session_create_target_time_title"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:layout_column="0"
                                        app:layout_gravity="left"
                                        app:layout_row="0"
                                        android:text="@string/session_create_target_title"
                                        android:textAppearance="?android:attr/textAppearanceLarge" />

                                    <TextView
                                        android:id="@+id/tv_session_create_target_time_description"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        app:layout_column="0"
                                        app:layout_gravity="left"
                                        app:layout_row="1"
                                        android:gravity="center"
                                        android:text="@string/session_create_target_hint" />

                                    <CheckBox
                                        android:id="@+id/cb_smart_target_time"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:contentDescription="@string/session_create_smart_target_description_enabled"
                                        android:text="@string/session_create_smart_target_title" />

                                    <TextView
                                        android:id="@+id/tv_smart_target_time_description"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:gravity="center"
                                        android:text="@string/session_create_smart_target_description_disabled" />
                                </LinearLayout>

                                <TimePicker
                                    android:id="@+id/tp_target_time"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    app:layout_column="1"
                                    app:layout_gravity="fill_horizontal"
                                    app:layout_row="0" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:id="@+id/advanced"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</LinearLayout>